[gd_scene load_steps=8 format=3 uid="uid://byyl62viipdym"]

[ext_resource type="Script" uid="uid://f318udyr34pl" path="res://scripts/s_sign_post_office.gd" id="1_gxur8"]
[ext_resource type="Texture2D" uid="uid://dp7xoeyck825s" path="res://assets/assetTilemaps/T_TW_Farm_Objects_Winter.png" id="1_k652m"]
[ext_resource type="PackedScene" uid="uid://bii1g0tlff5np" path="res://assets/assetsUI/animatedIcons/scene_exclamation_animated.tscn" id="2_8gsgq"]
[ext_resource type="PackedScene" uid="uid://dt41r2b0kjhcq" path="res://assets/assetsUI/animatedIcons/ineract_sign.tscn" id="3_82hm2"]
[ext_resource type="PackedScene" uid="uid://b88v7ymk1ahhj" path="res://scenes/sceneSprites/scene_dialogueBox.tscn" id="5_73jjp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gsgq"]
size = Vector2(12, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_82hm2"]
radius = 23.0

[node name="SceneSignPost2" type="RigidBody2D"]
mass = 0.001
gravity_scale = 0.0
script = ExtResource("1_gxur8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_k652m")
region_enabled = true
region_rect = Rect2(160, 112, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_8gsgq")

[node name="Exclamation" parent="." instance=ExtResource("2_8gsgq")]
position = Vector2(0, -18)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_82hm2")

[node name="InteractSign" parent="." instance=ExtResource("3_82hm2")]
scale = Vector2(0.1, 0.1)

[node name="SpeechBox" parent="." instance=ExtResource("5_73jjp")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
